<resources>
    <string name="app_name">News</string>
    <string name="hello">Hello World!</string>
    <string name="text_title_hello">Q-NEWS</string>
    <string name="text_choice_country">Choose country:</string>
    <string name="united_states">United States</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="russian">Russian</string>
    <string name="ukraine">Ukraine</string>
    <string name="choose_resources">choose resources:</string>
</resources>
