<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choice_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_choice_country"
            android:textSize="@dimen/sp_34" />

        <include layout="@layout/fragment_line_one_dp" />

        <FrameLayout style="@style/frameLanguageButton">
            <!--android:background="@color/bluelight_500"-->

            <ImageView
                style="@style/icFlags"
                android:src="@drawable/us_flag" />

            <TextView
                style="@style/textFlags"
                android:text="@string/united_states" />

            <ImageView
                style="@style/doneFlags"
                android:visibility="gone" />

        </FrameLayout>

        <include layout="@layout/fragment_line_one_dp" />

        <FrameLayout style="@style/frameLanguageButton">
            <!--android:background="@color/bluelight_500"-->

            <TextView
                style="@style/textFlags"
                android:text="@string/united_kingdom" />

            <ImageView
                style="@style/icFlags"
                android:src="@drawable/uk_flag" />

            <ImageView
                style="@style/doneFlags"
                android:visibility="gone" />

        </FrameLayout>

        <include layout="@layout/fragment_line_one_dp" />

        <FrameLayout style="@style/frameLanguageButton">
            <!--android:background="@color/bluelight_500"-->

            <TextView
                style="@style/textFlags"
                android:text="@string/russian" />

            <ImageView
                style="@style/icFlags"
                android:src="@drawable/ru_flag" />

            <ImageView
                style="@style/doneFlags"
                android:visibility="gone" />
        </FrameLayout>

        <include layout="@layout/fragment_line_one_dp" />

        <FrameLayout style="@style/frameLanguageButton">
            <!--android:background="@color/bluelight_500"-->
            <!--android:clickable="true"-->
            <!--android:onClick="ukraineClick"-->

            <TextView
                style="@style/textFlags"
                android:text="@string/ukraine" />

            <ImageView
                style="@style/icFlags"
                android:src="@drawable/ua_flag" />

            <ImageView
                style="@style/doneFlags"
                android:visibility="gone" />
        </FrameLayout>

        <include layout="@layout/fragment_line_one_dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <include layout="@layout/fragment_line_one_dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_action"
            android:layout_gravity="bottom">

            <ImageButton
                android:onClick="onClick"
                style="@style/buttonPrevNext"
                android:layout_gravity="center|right"
                android:paddingLeft="24dp"
                android:src="@drawable/ic_navigate_next_black_24dp" />

            <ImageButton
                android:onClick="backOnClick"
                style="@style/buttonPrevNext"
                android:layout_gravity="center|left"
                android:paddingRight="24dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>